--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "npm run typecheck && node build.mjs",
+    "build": "npm run typecheck && tsx build.mjs",
     "commands": "tsx src/deploy-commands.ts",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:deploy": "npx prisma migrate deploy",
     "dev": "tsx watch src/beatnik.ts",
-    "docker:build": "npm run build && docker build --platform linux/amd64 -t nickseman/beatnik:dev .",
+    "docker:build": "docker build --platform linux/amd64 -t nickseman/beatnik:dev .",
     "docker:up": "DOCKER_DEFAULT_PLATFORM=linux/amd64 docker compose -f 'docker-compose.dev.yml' up",
     "format": "prettier --write .",
-    "next:build": "npm run build && docker build --platform linux/amd64 -f Dockerfile.production -t nickseman/beatnik:next .",
+    "next:build": "docker build --platform linux/amd64 -f Dockerfile.production -t nickseman/beatnik:next .",
     "next:push": "docker push nickseman/beatnik:next",
     "next:up": "DOCKER_DEFAULT_PLATFORM=linux/amd64 docker compose -f 'docker-compose.next.yml' up",
     "preinstall": "npx only-allow npm",
-    "release:build": "npm run build && docker build --platform linux/amd64 -t nickseman/beatnik:latest .",
+    "release:build": "docker build --platform linux/amd64 -f Dockerfile.production -t nickseman/beatnik:latest .",
     "release:push": "docker push nickseman/beatnik:latest",
-    "start": "npm run db:deploy && node ./build/deploy-commands.cjs && node ./build/beatnik.cjs",
+    "start": "npm run db:deploy && node ./build/deploy-commands.mjs && node ./build/beatnik.mjs",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -33,6 +33,7 @@
     "dotenv": "^16.4.5",
     "jsdom": "^26.1.0",
     "node-libcurl-ja3": "^5.0.3",
+    "prisma": "^6.8.2",
     "sodium-native": "^5.0.6",
     "sqlite3": "^5.1.7",
     "youtubei.js": "^15.0.1"
@@ -43,10 +44,9 @@
     "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
-    "esbuild": "^0.25.4",
+    "esbuild": "^0.25.9",
     "eslint": "^9.27.0",
     "prettier": "^3.3.2",
-    "prisma": "^6.8.2",
     "rimraf": "^6.0.1",
     "tsx": "^4.15.6",
     "typescript": "^5.5.2"
