--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,30 +1,34 @@
-FROM node:22-trixie AS builder
-WORKDIR /builder
-COPY package*.json .
-RUN npm ci
+FROM node:22-slim AS builder
+WORKDIR /app
 
-FROM node:22-trixie-slim AS beatnik
-# set up default env
-ENV DATABASE_URL="file:/library.db" \
-  LIBRARY_PATH="/library" \
-  NODE_ENV="production"
-  # create mount points
-WORKDIR /
-RUN touch library.db
-RUN mkdir library
-# deps
-RUN apt-get update
-RUN apt-get install -y --no-install-recommends ffmpeg
-# copy needed files
-WORKDIR /usr/local/beatnik
-COPY package*.json .
-COPY build.mts .
-COPY tsconfig.json .
-COPY /src ./src
-COPY /prisma ./prisma
-COPY --from=builder /builder/node_modules ./node_modules
-RUN npm run db:generate
-RUN npm run build
-RUN npm prune
-# start beatnik
-CMD ["sh", "-c", "npm start"]
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3 make g++ \
+ && rm -rf /var/lib/apt/lists/*
+
+COPY package*.json tsconfig.json build.mts ./ 
+COPY src ./src
+COPY prisma ./prisma
+
+RUN npm ci \
+ && npm run db:generate \
+ && npm run build \
+ && npm prune --omit=dev
+
+FROM node:22-slim AS beatnik
+WORKDIR /app
+
+ENV DATABASE_URL="file:/app/library.db" \
+    LIBRARY_PATH="/app/library" \
+    NODE_ENV="production"
+
+RUN mkdir -p library \
+ && apt-get update \
+ && apt-get install -y --no-install-recommends openssl \
+ && rm -rf /var/lib/apt/lists/*
+
+COPY package*.json ./
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/build ./build
+COPY --from=builder /app/prisma ./prisma
+
+CMD ["npm", "start"]
