--- a/docker-compose.next.yml
+++ b/docker-compose.next.yml
@@ -3,10 +3,10 @@ services:
     container_name: "beatnik-next"
     image: "nickseman/beatnik:next"
     volumes:
-      - "./docker/library.db:/library.db"
-      - "./docker/library:/library"
+      - "./docker/library.db:/app/library.db"
+      - "./docker/library:/app/library"
     env_file: .env
     environment:
-      - LIBRARY_PATH=/library
-      - DATABASE_URL=file:/library.db
+      - LIBRARY_PATH=/app/library
+      - DATABASE_URL=file:/app/library.db
     restart: no
