--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
-    "@prisma/client": "^6.8.2",
+    "@prisma/adapter-better-sqlite3": "^6.14.0",
+    "@prisma/client": "^6.14.0",
     "bgutils-js": "^3.2.0",
     "discord.js": "^14.20.0",
     "dotenv": "^16.4.5",
     "jsdom": "^26.1.0",
     "node-libcurl-ja3": "^5.0.3",
-    "prisma": "^6.8.2",
+    "prisma": "^6.14.0",
     "sodium-native": "^5.0.6",
-    "sqlite3": "^5.1.7",
     "youtubei.js": "^15.0.1"
   },
   "devDependencies": {
