--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "npm run typecheck && tsx build.mjs",
+    "build": "npm run lint && npm run typecheck && tsx build.mjs",
     "commands": "tsx src/deploy-commands.ts",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -15,10 +15,11 @@
     "docker:build": "docker build --platform linux/amd64 -t nickseman/beatnik:dev .",
     "docker:up": "DOCKER_DEFAULT_PLATFORM=linux/amd64 docker compose -f 'docker-compose.dev.yml' up",
     "format": "prettier --write .",
+    "knip": "knip",
+    "lint": "npx eslint ./src",
     "next:build": "docker build --platform linux/amd64 -f Dockerfile.production -t nickseman/beatnik:next .",
     "next:push": "docker push nickseman/beatnik:next",
     "next:up": "DOCKER_DEFAULT_PLATFORM=linux/amd64 docker compose -f 'docker-compose.next.yml' up",
-    "preinstall": "npx only-allow npm",
     "release:build": "docker build --platform linux/amd64 -f Dockerfile.production -t nickseman/beatnik:latest .",
     "release:push": "docker push nickseman/beatnik:latest",
     "start": "npm run db:deploy && node ./build/deploy-commands.mjs && node ./build/beatnik.mjs",
@@ -39,17 +40,18 @@
     "youtubei.js": "^15.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.33.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.15.17",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
+    "@types/node": "^22.17.2",
     "esbuild": "^0.25.9",
-    "eslint": "^9.27.0",
+    "eslint": "^9.33.0",
+    "knip": "^5.62.0",
     "prettier": "^3.3.2",
     "rimraf": "^6.0.1",
     "tsx": "^4.15.6",
-    "typescript": "^5.5.2"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.40.0"
   },
   "engines": {
     "node": ">=22.0.0 <23.0.0"
