fix: include eslint in prod docker

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -5,7 +5,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     python3 make g++ \
  && rm -rf /var/lib/apt/lists/*
 
-COPY package*.json tsconfig.json build.mts ./ 
+COPY package*.json tsconfig.json build.mts eslint.config.mjs ./ 
 COPY src ./src
 COPY prisma ./prisma
 
