--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,6 @@
   "printWidth": 100,
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrder": [
-    "<THIRD_PARTY_MODULES>",
     "^[./]",
     "^commands/(.*)$",
     "^discord/(.*)$",
@@ -12,5 +11,6 @@
     "^generated/(.*)$",
     "^helpers/(.*)$"
   ],
-  "importOrderSeparation": true
+  "importOrderSeparation": false,
+  "importOrderSortSpecifiers": true
 }
