--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,24 +1,17 @@
 services:
-  beatnik:
-    container_name: "beatnik-dev"
-    image: "nickseman/beatnik:dev"
+  beatnik-dev:
+    container_name: beatnik-dev
+    platform: linux/amd64
+    image: nickseman/beatnik:dev
+    build:
+      context: .
+      target: dev
     volumes:
-      - "./docker/library.db:/app/library.db"
-      - "./docker/library:/app/library"
+      - ./src:/app/src
+      - ./prisma:/app/prisma
+      - ./docker/library.db:/app/library.db
+      - ./docker/library:/app/library
     env_file: .env
     environment:
       - LIBRARY_PATH=/app/library
       - DATABASE_URL=file:/app/library.db
-    restart: no
-    build:
-      context: .
-      dockerfile: Dockerfile
-    develop:
-      watch:
-        - action: sync
-          path: ./src
-          target: /app/src
-
-        - action: rebuild
-          path: package.json
-          target: /app
