--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
     "db:migrate": "prisma migrate dev",
     "db:deploy": "npx prisma migrate deploy",
     "dev": "tsx watch src/beatnik.ts",
-    "docker:build": "docker build --platform linux/amd64 -t nickseman/beatnik:dev .",
-    "docker:up": "DOCKER_DEFAULT_PLATFORM=linux/amd64 docker compose -f 'docker-compose.dev.yml' up --watch",
+    "docker:up": "docker compose -f 'docker-compose.dev.yml' up --build --remove-orphans",
     "format": "prettier --write .",
     "knip": "knip",
+    "latest:build": "docker build --platform linux/amd64 --target prod -t nickseman/beatnik:latest .",
+    "latest:push": "docker push nickseman/beatnik:latest",
     "lint": "npx eslint ./src",
     "lint:fix": "npx eslint ./src --fix",
-    "next:build": "docker build --platform linux/amd64 -f Dockerfile.production -t nickseman/beatnik:next .",
+    "next:build": "docker build --platform linux/amd64 --target prod -t nickseman/beatnik:next .",
     "next:push": "docker push nickseman/beatnik:next",
-    "next:up": "DOCKER_DEFAULT_PLATFORM=linux/amd64 docker compose -f 'docker-compose.next.yml' up",
-    "release:build": "docker build --platform linux/amd64 -f Dockerfile.production -t nickseman/beatnik:latest .",
-    "release:push": "docker push nickseman/beatnik:latest",
+    "next:up": "docker compose -f 'docker-compose.next.yml' up --build --remove-orphans",
     "start": "npm run db:deploy && node ./build/deploy-commands.mjs && node ./build/beatnik.mjs",
     "typecheck": "tsc --noEmit"
   },
