feat: add prisma generated to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
       "@generated/*": ["./prisma/generated/client/*"]
     }
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "prisma/generated/client/**/*"]
 }
