--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beatnik",
-  "version": "4.2.1",
+  "version": "4.2.2",
   "description": "modern and simple Discord music bot with easy-to-use commands",
   "author": "vphoebe",
   "license": "MIT",
@@ -27,16 +27,16 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
-    "@discordjs/voice": "^0.18.0",
+    "@discordjs/voice": "^0.19.0",
     "@prisma/adapter-better-sqlite3": "^6.14.0",
     "@prisma/client": "^6.14.0",
+    "@snazzah/davey": "^0.1.7",
     "bgutils-js": "^3.2.0",
-    "discord.js": "^14.20.0",
+    "discord.js": "^14.22.1",
     "dotenv": "^16.4.5",
     "jsdom": "^26.1.0",
     "node-libcurl-ja3": "^5.0.3",
     "prisma": "^6.14.0",
-    "sodium-native": "^5.0.6",
     "youtubei.js": "^15.1.1"
   },
   "devDependencies": {
